@@ -1,6 +1,6 @@
-/* Test mpf_cmp_si.
+/* Test mpf_cmp_si and mpf_cmp_z.
 
-Copyright 2000, 2001, 2004 Free Software Foundation, Inc.
+Copyright 2000, 2001, 2004, 2015 Free Software Foundation, Inc.
 
 This file is part of the GNU MP Library test suite.
 
@@ -46,6 +46,14 @@ check_data (void)
     { 10, "-1",  "0", -1 },
     { 10, "-1", "-1", 0 },
 
+    { 10, "1.5", "2", -1 },
+    { 10, "1.5", "1",  1 },
+    { 10, "0.5", "1", -1 },
+
+    { 10, "-1.5", "-2",  1 },
+    { 10, "-1.5", "-1", -1 },
+    { 10, "-0.5", "-1",  1 },
+
     { 16,         "0", "-0x80000000",  1 },
     { 16,  "80000000", "-0x80000000",  1 },
     { 16,  "80000001", "-0x80000000",  1 },
@@ -57,8 +65,15 @@ check_data (void)
     { 16,  "8000000000000000", "-0x8000000000000000",  1 },
     { 16,  "8000000000000001", "-0x8000000000000000",  1 },
     { 16, "-8000000000000000", "-0x8000000000000000",  0 },
-    { 16, "-8000000000000001", "-0x8000000000000000", -1 },
+    { 16, "-8000000000000000.1", "-0x8000000000000000", -1 },
     { 16, "-FF008000000000000001", "-0x8000000000000000", -1 },
+
+    { 16,                 "0", "-0x876543210FEDCBA9876543210000000",  1 },
+    { 16,  "876543210FEDCBA9876543210000000", "-0x876543210FEDCBA9876543210000000",  1 },
+    { 16,  "876543210FEDCBA9876543210000001", "-0x876543210FEDCBA9876543210000000",  1 },
+    { 16, "-876543210FEDCBA9876543210000000", "-0x876543210FEDCBA9876543210000000",  0 },
+    { 16, "-876543210FEDCBA9876543210000000.1", "-0x876543210FEDCBA9876543210000000", -1 },
+    { 16, "-FF00876543210FEDCBA9876543210000000", "-0x876543210FEDCBA9876543210000000", -1 },
   };
 
   mpf_t  a;
@@ -89,6 +104,18 @@ check_data (void)
               abort();
             }
         }
+
+      got = mpf_cmp_z (a, bz);
+      if (SGN (got) != data[i].want)
+      	{
+      	  printf ("mpf_cmp_z wrong on data[%d]\n", i);
+      	  printf ("  a="); mpf_out_str (stdout, 10, 0, a);
+      	  printf (" (%s)\n", data[i].a);
+      	  printf ("  b=%ld (%s)\n", b, data[i].b);
+      	  printf ("  got=%d\n", got);
+      	  printf ("  want=%d\n", data[i].want);
+      	  abort();
+      	}
     }
 
   mpf_clear (a);
